@@ -42,12 +42,12 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="wireshark-1.8.6.null.598346404" name="wireshark-1.8.6"/>
+		<project id="wireshark-2.2.2.null.598346404" name="wireshark-2.2.2"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Build (GNU)">
-			<resource resourceType="PROJECT" workspacePath="/wireshark-1.8.6"/>
+			<resource resourceType="PROJECT" workspacePath="/wireshark-2.2.2"/>
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
