@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wireshark-2.1.1</name>
+	<name>wireshark-2.2.2</name>
 	<comment></comment>
 	<projects>
 	</projects>
